@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{676, 91}, {1017, 1077}}</string>
+	<string>{{661, 86}, {1080, 1082}}</string>
 </dict>
 </plist>
